arrumando bugs encontrados nas noticias, nos banner de noticias e no dark mode

--- a/epWeb/src/main/resources/static/resources/css/css.css
+++ b/epWeb/src/main/resources/static/resources/css/css.css
@@ -198,3 +198,9 @@ body {
     width: 100%;
 }
 
+.banner_noticia{
+    max-width:100%;
+    max-height:100%;
+    width: auto;
+    height: auto;
+}
